<resources>
    <string-array name="multi_touch_modes">
        <item>Press</item>
        <item>Drag</item>
        <item>Random area</item>
    </string-array>
    <string name="field_multi_touch_area_title">Touch %1$d area</string>
    <string name="item_random_movement_title">Random movement</string>
    <string name="item_random_movement_desc">Move one finger randomly inside a selected area</string>
    <string name="item_random_movement_details">%1$s in area %2$d, %3$d - %4$d, %5$d; endpoint %6$s</string>
    <string name="item_random_movement_details_invalid">Random movement</string>
    <string name="field_random_movement_duration">Duration (ms)</string>
    <string name="field_random_movement_area">Movement area</string>
    <string name="field_random_movement_end">End position</string>
    <string name="generic_name">Name</string>
    <string name="generic_select_the_position">Select the position</string>
    <string name="generic_config">Config</string>
    <string name="generic_counters">Counters</string>
    <string name="generic_modify">Modify</string>
    <string name="generic_detection_area_title">Detection area</string>
    <string name="generic_detection_area_desc_empty">You must define a detection area. Click here to define one</string>
    <string name="generic_condition_threshold_title">Tolerated difference</string>
    <string name="generic_area_desc" translatable="false">[%1$d - %2$d; %3$d - %4$d]</string>
    <string name="item_event_desc_enabled_children">Enabled</string>
    <string name="item_event_desc_disabled_children">Disabled</string>
    <string name="item_image_condition_desc_threshold">%1$d%%</string>
    <string name="item_image_condition_desc_complete_threshold">Difference: %1$d%%</string>
    <string name="item_image_condition_visible">Visible</string>
    <string name="item_image_condition_not_visible">Not visible</string>
    <string name="item_counter_reached_title">On counter reached</string>
    <string name="item_counter_reached_desc">Verify the value of a counter modified by an Action</string>
    <string name="item_counter_reached_details">%1$s %2$s %3$s</string>
    <string name="item_timer_reached_title">On timer reached</string>
    <string name="item_timer_reached_desc">Fulfilled after a defined time from this trigger activation</string>
    <string name="item_timer_reached_details">%1$s after event is enabled</string>
    <string name="item_broadcast_received_title">On Broadcast received</string>
    <string name="item_broadcast_received_desc">Fulfilled when a Broadcast is received</string>
    <string name="item_broadcast_received_details">%1$s received</string>
    <string name="item_color_condition_title">On color detected</string>
    <string name="item_color_condition_desc">Fulfilled when a color is visible somewhere on the screen</string>
    <string name="item_image_condition_title">On image detected</string>
    <string name="item_image_condition_desc">Fulfilled when an image is visible somewhere on the screen</string>
    <string name="item_text_condition_title">On text detected</string>
    <string name="item_text_condition_desc">Fulfilled when a text is visible somewhere on the screen</string>
    <string name="item_number_condition_title">On number detected</string>
    <string name="item_number_condition_desc">Fulfilled when a number is visible somewhere on the screen</string>
    <string name="item_copy_title">Copy</string>
    <string name="item_copy_desc">Copy an existing Action from any Scenarios</string>
    <string name="item_click_title">Click</string>
    <string name="item_click_desc">Click somewhere on the screen</string>
    <string name="item_click_details_on_condition">During %1$s on %2$s</string>
    <string name="item_click_details_on_condition_unknown">During %1$s on detected condition</string>
    <string name="item_click_details_at_position">During %1$s</string>
    <string name="item_swipe_title">Swipe</string>
    <string name="item_swipe_desc">Swipe from a position on the screen to another</string>
    <string name="item_multi_touch_title">Multi-touch</string>
    <string name="item_multi_touch_desc">Touch the screen with two simultaneous strokes</string>
    <string name="item_multi_touch_details">Touch 1: %1$s, Touch 2: %2$s</string>
    <string name="item_swipe_details">During %1$s</string>
    <string name="item_pause_title">Wait</string>
    <string name="item_pause_desc">Pause the detection execution</string>
    <string name="item_pause_details">During %1$s</string>
    <string name="item_change_counter_title">Change counter</string>
    <string name="item_change_counter_desc">Change a value to verify it later</string>
    <string name="item_change_counter_details">%1$s %2$s %3$s</string>
    <string name="item_change_counter_details_error">Counter is invalid</string>
    <string name="item_toggle_event_title">Change event state</string>
    <string name="item_toggle_event_desc">Change the enabled state of an event</string>
    <string name="item_toggle_event_details_enable_all">Enable all</string>
    <string name="item_toggle_event_details_disable_all">Disable all</string>
    <string name="item_toggle_event_details_invert_all">Invert all</string>
    <string name="item_toggle_event_details_manual">Change %1$d events</string>
    <string name="item_toggle_event_details_error">Target event not found</string>
    <string name="item_intent_title">Intent</string>
    <string name="item_intent_desc">Interact with another application</string>
    <string name="item_intent_details">Send %1$s</string>
    <string name="item_intent_details_component_name">Send %1$s to %2$s</string>
    <string name="item_intent_details_start_activity">Start %1$s</string>
    <string name="item_notification_title">Notification</string>
    <string name="item_notification_desc">Send a notification to your device</string>
    <string name="item_notification_details_text">Send \"%1$s\"</string>
    <string name="item_webhook_title">Webhook</string>
    <string name="item_webhook_desc">Send an HTTPS request or Telegram Bot message</string>
    <string name="action_webhook_telegram_description">Webhook · Telegram Bot</string>
    <string name="action_webhook_custom_description">Webhook · %1$s</string>
    <string name="dialog_title_webhook">Webhook</string>
    <string name="field_webhook_mode">Mode</string>
    <string name="field_webhook_mode_telegram">Telegram Bot</string>
    <string name="field_webhook_mode_custom">Custom POST</string>
    <string name="field_webhook_token">Bot token</string>
    <string name="field_webhook_chat_id">Chat ID</string>
    <string name="field_webhook_message">Message</string>
    <string name="field_webhook_url">HTTPS URL</string>
    <string name="field_webhook_content_type">Content type</string>
    <string name="field_webhook_body">Body</string>
    <string name="message_webhook_backup_warning">The bot token is stored in this scenario and included in exports.</string>
    <string name="item_system_action_title">System action</string>
    <string name="item_system_action_desc">Use an Android system action (back, home or recent apps)</string>
    <string name="item_system_action_details_text">%1$s</string>
    <string name="item_set_text_title">Write text</string>
    <string name="item_set_text_desc">Write a text in the currently focused view</string>
    <string name="item_set_text_details_text">%1$s</string>
    <string name="item_set_text_details_text_empty">Clear text</string>
    <string name="search_view_hint_event_copy">Search by event name</string>
    <string name="search_view_hint_action_copy">Search by action name</string>
    <string name="search_view_hint_condition_copy">Search by condition name</string>
    <string name="list_header_copy_conditions_this">Conditions from this Event</string>
    <string name="list_header_copy_conditions_this_scenario">Conditions from this Scenario</string>
    <string name="list_header_copy_conditions_all">Conditions from all Scenarios</string>
    <string name="list_header_copy_action_this">Actions from this Event</string>
    <string name="list_header_copy_action_this_scenario">Actions from this Scenario</string>
    <string name="list_header_copy_action_all">Actions from all Scenarios</string>
    <string name="list_header_copy_event_this">Events from this scenario</string>
    <string name="list_header_copy_event_all">Events from all scenarios</string>
    <string name="dialog_title_scenario_config">Scenario</string>
    <string name="dialog_title_filler_event">Filler Event</string>
    <string name="message_empty_screen_event_title">No screen events !</string>
    <string name="message_empty_screen_event_desc">A screen event contains a set of actions executed when a specific condition is detected on the screen.\nYou need at least one screen or trigger event in your scenario to execute it.</string>
    <string name="message_empty_trigger_event_list_title">No trigger events !</string>
    <string name="message_empty_trigger_event_list_desc">A trigger event contains a set of actions executed when a set of custom conditions are met.\nYou need at least one screen or trigger event in your scenario to execute it.</string>
    <string name="message_empty_filler_event_list_title">No filler events !</string>
    <string name="message_empty_filler_event_list_desc">Filler events define a random movement that repeats whenever no other event is executing actions.</string>
    <string name="menu_item_title_image_events">Screen</string>
    <string name="menu_item_title_trigger_events">Triggers</string>
    <string name="menu_item_title_filler_events">Fillers</string>
    <string name="menu_item_title_more">More</string>
    <string name="field_scenario_keep_screen_on_title">Keep screen on</string>
    <string name="field_scenario_keep_screen_on_enabled">Keep the device screen on while detecting.</string>
    <string name="field_scenario_keep_screen_on_disabled">Use the normal device screen behaviour.</string>
    <string name="field_scenario_fps_limit_title">Execution limiter</string>
    <string name="field_scenario_fps_limit_desc">Limit your scenario processing frequency to save battery. Detection will be slower.</string>
    <string name="field_scenario_fps_rate_label">Executions</string>
    <string name="field_scenario_fps_rate_unit_label">Per</string>
    <string name="field_scenario_fps_dropdown_item_second">Second</string>
    <string name="field_scenario_fps_dropdown_item_minute">Minute</string>
    <string name="field_scenario_fps_limit_disable_rate" translatable="false">∞</string>
    <string name="field_scenario_quality_title">Detection resolution</string>
    <string name="field_scenario_quality_description">To achieve faster detection, Klick\'r is downscaling the images before detecting.\n\nIf you increase the resolution, the detection will be slower, but more accurate. If you decrease the resolution, the detection will be faster, but less accurate. Find the good ratio between the detection resolution and the conditions thresholds to get the best of your scenarios!</string>
    <string name="field_scenario_quality_resolution" translatable="false">%1$d x %2$d</string>
    <string name="field_counters_title">Counters</string>
    <string name="field_counters_desc_empty">No counters defined</string>
    <string name="field_counters_desc">%1$d counters defined</string>
    <string name="field_show_debug_view_title">Show debug view</string>
    <string name="field_show_debug_view_desc">Display the events triggered while detecting.</string>
    <string name="item_title_debug_generate_report">Generate a report</string>
    <string name="item_desc_debug_generate_report">Capture your scenario behaviour while detecting to create a report.</string>
    <string name="field_pause_type">Wait type</string>
    <string name="field_pause_spread_focused">Focused</string>
    <string name="field_pause_spread_wide">Wide</string>
</resources>