<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2026 Kevin Buzeau
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.Dialog.BackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_top_bar"
        layout="@layout/include_dialog_navigation_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_vertical_large"
        android:layout_marginBottom="@dimen/margin_vertical_extra_large"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            android:orientation="vertical">

            <include
                android:id="@+id/field_name"
                layout="@layout/include_field_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/AppTheme.TextAppearance.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_webhook_mode" />
            <RadioGroup
                android:id="@+id/field_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/mode_telegram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_webhook_mode_telegram" />
                <RadioButton
                    android:id="@+id/mode_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_webhook_mode_custom" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/telegram_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include
                    android:id="@+id/field_token"
                    layout="@layout/include_field_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <include
                    android:id="@+id/field_chat_id"
                    layout="@layout/include_field_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <include
                    android:id="@+id/field_telegram_message"
                    layout="@layout/include_field_text_input_with_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_vertical_small"
                android:text="@string/message_webhook_backup_warning" />

            <LinearLayout
                android:id="@+id/custom_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <include
                    android:id="@+id/field_url"
                    layout="@layout/include_field_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <include
                    android:id="@+id/field_content_type"
                    layout="@layout/include_field_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <include
                    android:id="@+id/field_body"
                    layout="@layout/include_field_text_input_with_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
