<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright (C) 2024 Kevin Buzeau
*
* This program is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme.Dialog.BackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_dialog_navigation_top_bar"
        android:id="@+id/layout_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_vertical_large"
        android:layout_marginBottom="@dimen/margin_vertical_extra_large"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default">

            <include layout="@layout/include_field_text_input"
                android:id="@+id/field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_horizontal_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/pause_mode_label"
                style="@style/AppTheme.TextAppearance.CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_pause_type"
                app:layout_constraintTop_toBottomOf="@id/field_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <Spinner
                android:id="@+id/pause_mode_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_horizontal_small"
                app:layout_constraintTop_toBottomOf="@id/pause_mode_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <include layout="@layout/include_field_text_input"
                android:id="@+id/edit_pause_duration_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_horizontal_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_unit_field"
                app:layout_constraintTop_toBottomOf="@id/pause_mode_field" />

            <include layout="@layout/include_field_text_input"
                android:id="@+id/edit_random_min_duration_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_horizontal_small"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_unit_field"
                app:layout_constraintTop_toBottomOf="@id/pause_mode_field" />

            <include layout="@layout/include_field_text_input"
                android:id="@+id/edit_random_max_duration_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_horizontal_small"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/time_unit_field"
                app:layout_constraintTop_toBottomOf="@id/edit_random_min_duration_layout" />
            <include layout="@layout/include_field_slider"
                android:id="@+id/field_random_most_likely"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/edit_random_max_duration_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <include layout="@layout/include_field_slider"
                android:id="@+id/field_random_spread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/field_random_most_likely"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/label_random_spread_focused"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_pause_spread_focused"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/field_random_spread"
                app:layout_constraintTop_toBottomOf="@id/field_random_spread" />

            <TextView
                android:id="@+id/label_random_spread_wide"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_pause_spread_wide"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/field_random_spread"
                app:layout_constraintTop_toBottomOf="@id/field_random_spread" />

            <include layout="@layout/include_input_field_dropdown"
                android:id="@+id/time_unit_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_vertical_large"
                android:layout_marginStart="@dimen/margin_horizontal_large"
                app:layout_constraintStart_toEndOf="@id/edit_pause_duration_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/edit_pause_duration_layout"
                app:layout_constraintWidth_percent="0.3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>